Criando estrutura do projeto

--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
-<html>
+<html ng-app="app">
 <head>
-	<title></title>
+	<title>PROVA ESCOLA DE TI</title>
 </head>
-<body>
+<body ng-controller="Controller">
 
+
+	<script type="text/javascript" src="js/angular.min.js"></script>
+	<script type="text/javascript" src="js/angular-route.js"></script>
 </body>
 </html>
