--- a/index.html
+++ b/index.html
@@ -1,8 +1,16 @@
-<html>
-<head>
-	<title></title>
-</head>
-<body>
+<!DOCTYPE html>
+<html ng-app="app">
+	<head>
+		<meta charset="utf-8">
+		<title>PROVA ESC TI BIM1</title>
+	</head>
+	<body ng-controller="Controller">
+	<ng-view></ng-view>
 
-</body>
+		<script type="text/javascript" src="js/angular.min.js"></script>
+		<script type="text/javascript" src="js/angular-route.js"></script>
+		<script type="text/javascript" src="js/app.js"></script>		
+		<script type="text/javascript" src="js/index.controller.js"></script>		
+		<script type="text/javascript" src="js/index.factory.js"></script>		
+	</body>
 </html>
